<resources>
    <string name="app_name">Smart Home System</string>
    <string name="title_activity_register">Register</string>
    <string name="register_now">Register Now</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login_here">Login Here</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="register_account">Register account</string>
    <string name="already_have_an_account">Already Have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="confirm_password">confirm password</string>
    <string name="welcome_to_smart_home_system">Welcome to Smart Home System</string>
    <string name="email_or_username">Email or username</string>
    <string name="log_in">Log In</string>
    <string name="remember_this_device">Remember this device</string>
    <string name="forget_password">Forget password?</string>
    <string name="username">Username</string>
    <string name="password_visibility_toggle_description" />
    <string name="create_account">Create Account</string>
    <string name="select_birth_date" />
    <string name="birth_date">Birth Date</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="google_oauth_client_id">141441317696-r3fd5l9bivkc825arubl9i57dheio6na.apps.googleusercontent.com</string>
    <string name="facebook_app_id">7401441279964009</string>
    <string name="fb_login_protocol_scheme">fb7401441279964009</string>
    <string name="facebook_client_token">f1e828781136b9af2070824661dc01e0</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="log_out">Log out</string>
    <string name="my_profile">My Profile</string>
    <string name="renad_haitham">Renad Haitham</string>
    <string name="renad_gmail_com">renad@gmail.com</string>
    <string name="_01017979060">01017979060</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="provide_your_account_s_email_for_which_you_want_to_reset_your_password">Provide your account\'s email for which you want to reset your password!</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>

</resources>